--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+h1 {
+  font-size: 2.4rem;
+  margin-bottom: 0.3rem;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-bottom: 2rem;
+  color: #555;
+}
+
 #lang-select {
   margin-bottom: 1.5rem;
   display: flex;
@@ -26,4 +39,3 @@
   color: white;
   border-color: #333;
 }
-
