--- a/style.css
+++ b/style.css
@@ -147,3 +147,25 @@ h2 {
   color: #555;
   font-style: italic;
 }
+.challenge-type {
+  margin-bottom: 1rem;
+  font-size: 1.1rem;
+}
+
+.challenge-description {
+  margin-bottom: 1.2rem;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  font-weight: 500;
+}
+
+.challenge-tips {
+  margin-top: 1rem;
+  font-size: 1.1rem;
+  line-height: 1.3;
+}
+
+.label {
+  font-weight: 600;
+  margin-right: 0.3rem;
+}
