--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ h2 {
   margin-top: 1rem;
 }
 
+#refresh {
+  margin-bottom: 2.5rem;
+}
+
+
 
 /* ------------------------------
    TITRE PRINCIPAL
